--- a/index.html
+++ b/index.html
@@ -88,22 +88,22 @@
 
               <div class="hero-stats" data-aos="fade-up" data-aos-delay="200">
                 <div class="stat-item">
-                  <span class="purecounter" data-purecounter-start="0" data-purecounter-end="150" data-purecounter-duration="2">0</span>
+                  <span class="purecounter" data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="2">50</span>
                   <span class="stat-label">Projects Completed</span>
                 </div>
                 <div class="stat-item">
-                  <span class="purecounter" data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="2">0</span>
+                  <span class="purecounter" data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="2">2</span>
                   <span class="stat-label">Years Experience</span>
                 </div>
-                <div class="stat-item">
-                  <span class="purecounter" data-purecounter-start="0" data-purecounter-end="16" data-purecounter-duration="2">0</span>
+                <!-- <div class="stat-item">
+                  <span class="purecounter" data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="2">0</span>
                   <span class="stat-label">Open Source Contributions</span>
-                </div>
+                </div> -->
               </div>
   
 
               <div class="hero-actions" data-aos="fade-up" data-aos-delay="300">
-                <a href="#portfolio" class="btn btn-primary">View My Work</a>
+                <a href="#resume" class="btn btn-primary">View My Work</a>
                 <a href="#contact" class="btn btn-outline">Get In Touch</a>
                 <a href="assets/resume.pdf" class="btn btn-outline" download>Download Resume</a>
               </div>
@@ -111,7 +111,7 @@
               <div class="social-links" data-aos="fade-up" data-aos-delay="400">
                 <!-- <a href="#"><i class="bi bi-twitter"></i></a> -->
                 <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-github"></i></a>
+                <a href="https://github.com/HP161103"><i class="bi bi-github"></i></a>
                 <!-- <a href="#"><i class="bi bi-instagram"></i></a> -->
               </div>
             </div>
@@ -553,8 +553,8 @@
                 </div>
                 <div class="content">
                   <h4>Phone Number</h4>
-                  <p>+1 5589 55488 55</p>
-                  <p>+1 6678 254445 41</p>
+                  <p>+1 857 244 8691</p>
+                  <!-- <p>+1 6678 254445 41</p> -->
                 </div>
               </div>
 
