--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </a>
 
         <div class="social-links text-center">
-          <a href="#" class="github"><i class="bi bi-github"></i></a>
+          <a href="https://github.com/HP161103" class="github"><i class="bi bi-github"></i></a>
           <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
 
@@ -340,7 +340,7 @@
                     <i class="bi bi-trophy"></i>
                   </div>
                   <div class="stat-info">
-                    <span class="stat-number">3+</span>
+                    <span class="stat-number">2</span>
                     <span class="stat-label">Years Experience</span>
                   </div>
                 </div>
@@ -350,20 +350,20 @@
                     <i class="bi bi-diagram-3"></i>
                   </div>
                   <div class="stat-info">
-                    <span class="stat-number">150+</span>
+                    <span class="stat-number">50+</span>
                     <span class="stat-label">Projects Completed</span>
                   </div>
                 </div>
 
-                <div class="stat-item" data-aos="zoom-in" data-aos-delay="500">
+                <!-- <div class="stat-item" data-aos="zoom-in" data-aos-delay="500">
                   <div class="stat-circle">
                     <i class="bi bi-people"></i>
                   </div>
                   <div class="stat-info">
-                    <span class="stat-number">8+</span>
+                    <span class="stat-number"></span>
                     <span class="stat-label">Open Source Contributions</span>
                   </div>
-                </div>
+                </div> -->
               </div>
 
               <div class="skills-badges" data-aos="fade-up" data-aos-delay="600">
