--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <nav id="navmenu" class="navmenu">
 
         <div class="profile-img">
-          <img src="assets/img/profile/profile-square-1.jpg" alt="" class="img-fluid rounded-circle">
+          <img src="assets/img/profile/profile-square-1.JPG" alt="" class="img-fluid rounded-circle">
         </div>
 
         <a href="index.html" class="logo d-flex align-items-center justify-content-center active">
@@ -144,7 +144,7 @@
                   <span>Generative AI</span>
                 </div>
               </div>
-              <img src="assets/img/profile/profile-square-1.jpg" alt="Portfolio Hero" class="img-fluid hero-main-image">
+              <img src="assets/img/profile/profile-square-1.JPG" alt="Portfolio Hero" class="img-fluid hero-main-image">
               <div class="image-overlay"></div>
             </div>
           </div>
