--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
           <!-- Project 1: Churn Prediction -->
           <article class="project-card" data-category="ml" data-aos="zoom-in" data-aos-delay="100">
-            <a href="https://github.com/HP161103/churn-prediction-ml" target="_blank" class="project-link">
+            <a href="https://github.com/HP161103" target="_blank" class="project-link">
               <div class="github-badge">
                 <i class="bi bi-github"></i>
               </div>
@@ -236,7 +236,7 @@
 
           <!-- Project 2: Analytics Dashboard -->
           <article class="project-card" data-category="fullstack" data-aos="zoom-in" data-aos-delay="200">
-            <a href="https://github.com/HP161103/product-analytics-dashboard" target="_blank" class="project-link">
+            <a href="https://github.com/HP161103" target="_blank" class="project-link">
               <div class="github-badge">
                 <i class="bi bi-github"></i>
               </div>
@@ -282,7 +282,7 @@
 
           <!-- Project 3: RAG System -->
           <article class="project-card" data-category="genai" data-aos="zoom-in" data-aos-delay="300">
-            <a href="https://github.com/HP161103/rag-content-analyzer" target="_blank" class="project-link">
+            <a href="https://github.com/HP161103" target="_blank" class="project-link">
               <div class="github-badge">
                 <i class="bi bi-github"></i>
               </div>
@@ -328,7 +328,7 @@
 
           <!-- Project 4: Email Automation -->
           <article class="project-card" data-category="fullstack" data-aos="zoom-in" data-aos-delay="400">
-            <a href="https://github.com/HP161103/email-automation-platform" target="_blank" class="project-link">
+            <a href="https://github.com/HP161103" target="_blank" class="project-link">
               <div class="github-badge">
                 <i class="bi bi-github"></i>
               </div>
@@ -374,7 +374,7 @@
 
           <!-- Project 5: Deep Learning CV -->
           <article class="project-card" data-category="dl" data-aos="zoom-in" data-aos-delay="500">
-            <a href="https://github.com/HP161103/deep-learning-cv" target="_blank" class="project-link">
+            <a href="https://github.com/HP161103" target="_blank" class="project-link">
               <div class="github-badge">
                 <i class="bi bi-github"></i>
               </div>
@@ -420,7 +420,7 @@
 
           <!-- Project 6: Distributed System -->
           <article class="project-card" data-category="fullstack" data-aos="zoom-in" data-aos-delay="600">
-            <a href="https://github.com/HP161103/distributed-web-service" target="_blank" class="project-link">
+            <a href="https://github.com/HP161103" target="_blank" class="project-link">
               <div class="github-badge">
                 <i class="bi bi-github"></i>
               </div>
